<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ln_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_welcome_back"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/txt_login_back_into_your_account"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_face"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_face"
        android:elevation="1dp"
        android:padding="20dp"
        android:src="@drawable/ic_face_happy"
        app:layout_constraintEnd_toEndOf="@id/ln_title"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/ln_title"
        app:layout_constraintTop_toBottomOf="@id/ln_title"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/ln_login"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="160dp"
        android:background="@drawable/bg_login2"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/ln_title"
        app:layout_constraintStart_toStartOf="@id/ln_title"
        app:layout_constraintTop_toTopOf="@id/ln_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30sp"
            android:gravity="center|start"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20sp"
            android:background="@drawable/bt_login2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/ic_baseline_email_24"
                android:backgroundTint="@color/gray"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:text="@string/txt_e_mail"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bt_login2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/ic_baseline_lock_24"
                android:backgroundTint="@color/gray"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:text="@string/txt_password"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bt_rec2"
            android:text="@string/txt_login"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ln_login"
        app:layout_constraintStart_toStartOf="@id/ln_login"
        app:layout_constraintTop_toBottomOf="@id/ln_login">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/txt_don_t_have_an_account_yet"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txt_join_now"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>