<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/iv_reclogin"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/rec_login"
        android:padding="150dp"
        android:src="@drawable/ic_load"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/txt_register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_reclogin"
        app:layout_constraintEnd_toEndOf="@id/iv_reclogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <LinearLayout
        android:id="@+id/ln_fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rec_email"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_reclogin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_person_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_fullname" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rec_email"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln_fullname">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_email_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rec_email"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/ln_email"
        app:layout_constraintStart_toStartOf="@id/ln_email"
        app:layout_constraintTop_toBottomOf="@id/ln_email">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_local_phone_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_phone_number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rec_email"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/ln_phone"
        app:layout_constraintStart_toStartOf="@id/ln_phone"
        app:layout_constraintTop_toBottomOf="@id/ln_phone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:src="@drawable/ic_baseline_vpn_key_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_password" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rec"
        android:gravity="center"
        android:text="@string/txt_register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ln_password" />

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/txt_already_a_member"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/txt_login"
        android:textColor="@color/color_orange"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/tv_account"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>